- made test suites individually runnable again - made ASTRewritingTest creation future-proof (new AST.JLS* level needs just one addition in JLS_LEVELS) - removed remaining tests that hard-coded an AST level